
 * src/search.c:
   When using Find All in the Find dialog (in Session and Document),
   display the right amount of matches.
   Fix the display of the matches once per line (I broke the original
   patch).
 * src/ui_uitls.c:
   Fix wrong directory selection behaviour in all Open Folder dialogs
   (closes #2688020, patch by Marcel Stimberg, thanks).


2009-03-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/socket.c:
   Reduce default file permissions on the Unix Domain socket file
   (reported by Jörg Sommer, thanks).


2009-03-13  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/geany.txt, doc/geany.html, geany.glade, src/interface.c,
   src/main.c, src/plugindata.h, src/plugins.c, src/prefs.c,
   src/prefs.h:
   Add an option to set an additional plugin lookup path.
 * src/search.c:
   When using Find All in the Find dialog, display matches only once
   per line in the messages window (patch by Bert Vermeulen, thanks).


2009-03-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetype_extensions.conf, data/filetypes.actionscript,
   src/about.c, src/document.c, src/filetypes.c, src/filetypes.h,
   src/highlighting.c, src/plugindata.h, src/symbols.c,
   tagmanager/Makefile.am, tagmanager/actionscript.c,
   tagmanager/makefile.win32, tagmanager/parsers.h, THANKS, wscript:
   Add filetype ActionScript (patch by Chris Macksey, thanks).
   Update type keywords only for real C-like languages.
   Fix wrong sorting of Assembler and Ada filetypes.
 * plugins/classbuilder.c:
   Use G_DEFINE_TYPE in the GTK+ class template instead of manual code.
   Other minor cleanups.


2009-03-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/notebook.c:
   Don't use menu item images for the tab bar menu to save some
   vertical space.
 * data/filetypes.fortran, tagmanager/fortran.c:
   Add keyword 'extends' and fix Fortran parser to support the
   'extends' keyword (closes #2654492).