@@ -8,6 +8,9 @@
  * src/ui_uitls.c:
    Fix wrong directory selection behaviour in all Open Folder dialogs
    (closes #2688020, patch by Marcel Stimberg, thanks).
+ * src/socket.c:
+   Don't present the main window of a running instance when starting
+   a second instance separately.
 
 
 2009-03-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
